# updater

./: Cargo.toml  LICENSE  README.md  config.json  config.yaml  go.mod  go.sum  main.go  out.txt
.github/workflows/: update.yml
src/: config.rs  github.rs  liteapks.rs  main.rs  telegram.rs
